# ALTSUCourse2023

./: .gitignore  CMakeLists.txt  README.md  data.txt
cmake/: CompileOptions.cmake
datadir/: data.txt  newfile.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libfuncs/: CMakeLists.txt
src/libfuncs/libfuncs/: funcs.cpp  funcs.hpp
